<resources>
    <string name="app_name" translatable="false">GBHelp</string>
    <string name="action_settings">Settings</string>

    <string name="emptyText" translatable="false" />

    <string name="message">Message</string>
    <string name="feeds_tab">Feeds</string>
    <string name="apps_tab">Apps</string>
    <string name="community_tab">Community</string>

    <string name="suggest_fab">Suggestion</string>
    <string name="ask_fab">Help</string>
    <string name="report_fab">Report</string>

    <string name="addFeed_upload_media_title">Media</string>
    <string name="addFeed_upload_media_title_ar">Media-ar</string>
    <string name="addFeed_title">Title</string>
    <string name="addFeed_summery">Summery</string>
    <string name="addFeed_tag">Tag</string>
    <string name="addFeed_upload">Upload</string>
    <string name="addFeed_post">Post</string>
    <string name="explain_with_pics">More Details</string>

    <string name="gb_translate">Translate</string>
    <string name="done_translate">Translated</string>
    <string name="translate_toast">Translating … Wait a moment</string>
    <string name="translate_to_ar">Translate to Arabic</string>
    <string name="translate_to_en">Translate to English</string>
    <string name="translate_to_pt_rbr">Translate to Portuguese</string>
    <string name="translate_to_in">Translate to Hindi</string>
    <string name="translate_to_es">Translate to Spanish</string>
    <string name="translate_to_fr">Translate to French</string>
    <string name="translate_to_ge">Translate to German</string>
    <string name="translate_to_it">Translate to Italian</string>
    <string name="translate_to_tu">Translate to Turkish</string>
    <string name="translate_to_fa">Translate to Farsi</string>


    <string name="share_app_text" translatable="false">"GBHelp \n https://play.google.com/store/apps/details?id=com.gb.gbhelp"</string>
    <string name="gbapp_version" translatable="false">GBHelp v1.0</string>
    <string name="gbapp_version_number" translatable="false">1.0</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="english" translatable="false">English</string>
    <string name="sesl_appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="report">Report…</string>
    <string name="help">Help</string>


    <string name="about_title">App info</string>
    <string name="about_version">Version</string>
    <string name="settings_latest_version_installed">The latest version is installed.</string>
    <string name="settings_update_button">Update</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="open_source_libraries">Open-source libraries</string>
    <string name="default_language">Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="change_language_title">Language</string>
    <string name="default_language_summary">English</string>
    <string name="change_theme_title">Theme</string>
    <string name="default_theme_summary">Light</string>
    <string name="my_bugs">My Questions</string>
    <string name="my_suggestions">My Suggestions</string>
    <string name="your_q">Your question…</string>
    <string name="your_sug">Your suggestion…</string>
    <string name="copy">Copy</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account?<font color='#FFBB86FC'><b> Sign up.</b></font> </string>
    <string name="login">Login</string>
    <string name="nickname">Nickname</string>
    <string name="register">Register</string>
    <string name="re_password">Re-enter password</string>
    <string name="password_not_match">Password not match</string>
    <string name="logout">Logout</string>
</resources>