<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:onClick="hideKeyboard"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:layout_marginBottom="50dp"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edittext_login"
            android:ems="10"
            android:hint="@string/nickname"
            android:inputType="textPersonName"
            android:padding="@dimen/standard_12" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="@dimen/standard_12"
            android:background="@drawable/edittext_login"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="@dimen/standard_12" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="@dimen/standard_12"
            android:layout_marginRight="25dp"
            android:background="@drawable/edittext_login"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/standard_12"
            android:textAlignment="viewStart"/>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="@dimen/standard_12"
            android:layout_marginRight="25dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/register" />


    </LinearLayout>
</LinearLayout>