<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_background">

    <LinearLayout
        android:id="@+id/loginLayout"
        android:onClick="hideKeyboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UsingOnClickInXml">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:layout_marginBottom="50dp"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edittext_login"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="@dimen/standard_12" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="@dimen/standard_12"
            android:layout_marginRight="25dp"
            android:background="@drawable/edittext_login"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="@dimen/standard_12"
            android:hint="@string/password"
            android:textAlignment="viewStart"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="@dimen/standard_12"
            android:layout_marginRight="25dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/login" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/settings_divider"
        android:layout_above="@id/register"/>
    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:textSize="13sp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>